# mk

./: .Mk.yaml  Cargo.toml  LICENSE  README.md
.github/actions/rust-build/: action.yaml
.github/workflows/: check.yaml  release.yaml
src/: editor_config.rs  main.rs  mk_info.rs  project.rs
src/build_system/: cargo.rs  cmake.rs  make.rs  meson.rs  mod.rs
