[package]
name = "mk"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.155"
notify = "6.1.1"
same-file = "1.0.6"
serde = { version = "1.0.201", features = ["derive"] }
serde_ini = "0.2.0"
serde_yaml = "0.9.34"
term_size = "0.3.2"
thiserror = "1.0.60"
